--- a/couchsurfing/src/Components/Search/search.module.css
+++ b/couchsurfing/src/Components/Search/search.module.css
@@ -2,13 +2,16 @@
     width:100%;
     height:100%;
 }
+.Container{
+    position:relative;
+}
 .Parent{
     position: absolute;
     background-color: white;
-    bottom: 17.5%;
+    /* bottom: 17.5%;
     top: 20%;
     left: 10rem;
-    right: 10rem;
+    right: 10rem; */
 }
 .more{
     height: 3.5rem;
